Add Spotless, Enforcer, and SpotBugs quality gates to the build: Spotless enforces google-java-format at verify with the full reformat applied across main and test sources, Enforcer requires Maven 3.8+ and JDK 17+ and bans duplicate pom dependency versions, and SpotBugs runs at max effort failing the build on findings, with AclPolicy switched from Collections.unmodifiableMap to the genuinely immutable Map.copyOf and its remaining record-accessor EI_EXPOSE_REP false positive suppressed with justification in spotbugs-exclude.xml; .mvn/jvm.config supplies the add-exports flags google-java-format needs on JDK 17+